# ArcwellGame2D

./: .cproject  .gitignore  .project  CMakeLists.txt  CMakePresets.json  README.md  SYSTEM.CNF  build_command.txt  gradle.properties  isoconfig.xml  license.sys  local.properties  main.c
Debug/: Controls.txt
Debug/res/location/: location.json
app/jni/: Android.mk  Application.mk
app/jni/SDL2_image/: REVISION.txt
app/jni/SDL2_image/VisualC/: Version.rc
app/jni/SDL2_image/src/: version.rc
app/jni/src/: Android.mk  e_entity.h  k_keyboard.h  l_location.h  main.c  r_renderer.h  u_utility.h
res/: assets.arc
res/location/: tomb.arc
src/: e_entity.c  e_entity.h  g_constants.h  g_entity.c  g_entity.h  g_gamestate.c  g_gamestate.h  g_map.c  g_map.h  h_keyboard.c  h_keyboard.h  i_arcwell.c  i_arcwell.h  i_sdl.c  i_system.h  k_keyboard.h  l_arcloader.c  l_arcloader.h  l_location.c  l_location.h  main.c  mapmaker.c  p_physics.c  p_physics.h  pc_main.c  r_renderer.c  r_renderer.h  s_sdl.c  s_system.h  typedefs.h  u_utility.h
